--- a/about.html
+++ b/about.html
@@ -31,6 +31,11 @@
     
     <div class="content">
         <div class = "project">
+            <h1> CS61B Projects </h1>
+            <p class="description"> Built projects such as an Enigma machine simulator, Ataxx with an AI, and Gitlet (version-control system similar to Git).</p>
+        </div>
+
+        <div class = "project">
             <h1> CS61A Projects </h1>
             <p class="description"> For my CS class, I've created projects such as an interpreter for the Scheme language, a typing game, and a tower-defense game.</p>
         </div>
